<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/titleWrapper"
                                                       app:layout_constraintTop_toTopOf="parent"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <EditText android:id="@+id/newNoteTitle"
                  android:layout_height="match_parent"
                  android:layout_width="0dp"
                  android:inputType="text"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toStartOf="@+id/addImpSwitch"
                  android:hint="@string/title"/>

        <Switch
                android:text="@string/is_important"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addImpSwitch"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText android:id="@+id/newNoteContent"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              app:layout_constraintTop_toBottomOf="@+id/titleWrapper"
              app:layout_constraintBottom_toTopOf="@id/createNoteBtn"
              android:gravity="top|start"
              android:hint="@string/content"/>

    <Button
            android:id="@+id/createNoteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>