<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout app:layout_constraintTop_toTopOf="parent"
                                                       android:id="@+id/switchWrapper"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <Switch
                android:text="@string/important"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeImpSwitch"
                android:textAlignment="viewEnd"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/changeArcSwitch"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Switch
                android:text="@string/archived"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeArcSwitch"
                android:textAlignment="viewEnd"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toEndOf="@id/changeImpSwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText android:id="@+id/changeNoteTitle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/switchWrapper"
              android:inputType="text"
              android:gravity="top|start"
              android:hint="@string/title"/>

    <EditText android:id="@+id/changeNoteContent"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              app:layout_constraintTop_toBottomOf="@+id/changeNoteTitle"
              app:layout_constraintBottom_toBottomOf="parent"
              android:gravity="top|start"
              android:hint="@string/content"/>
</androidx.constraintlayout.widget.ConstraintLayout>