<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/searchWrapper"
                                                           android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <EditText android:id="@+id/searchBar"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:hint="@string/search"
                      android:gravity="top|start"
                      android:inputType="text"
                      android:layout_marginStart="5dp"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toStartOf="@+id/archiveSwitch"/>

            <Switch android:text="@string/is_archived"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/archiveSwitch"
                    android:gravity="center"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/archiveSwitch"
                app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
            android:id="@+id/addNoteBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/add"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>